--- a/frontend/management/templates/reports/reports4.html
+++ b/frontend/management/templates/reports/reports4.html
@@ -19,103 +19,58 @@
                     <div class="col-md-12">
                         <div class="card mt-8">
                             <div class="card-body">
-                                <center><h5>Edit Facilities</h5></center>
+                                <center><h5>Best Five Days</h5></center>
+                                <p class="lead">for a selected month :</p>
                                 <br><center>
-                                <form action="{% url 'edit_facility' %}" method="GET">
-                                <div class = "row" style="justify-content: center">
-                                
-                                <div class="col-md-2">
-                                    <select id="facilityDropdown" name="facilityDropdown" class="form-control">
-                                        <option value="" disabled {% if not facility_details %}selected{% endif %}>Select Facility ID</option>
-                                        {% for f in facilities %}
-                                            <option value="{{ f.Facility_ID }}" {% if facility_details and f.Facility_ID == facility_details.Facility_ID %}selected{% endif %}>{{ f.Facility_ID }}</option>
-                                        {% endfor %}
-                                    </select>
-                                    
+                                    <form action="{% url 'view_report4' %}" method="GET">
+                                        <div class="mb-3">
+                                            <label for="monthSelect" class="form-label">Month</label>
+                                            <select class="form-select" id="selected_month" name="selected_month">
+                                                <option value="01">January</option>
+                                                <option value="02">February</option>
+                                                <option value="03">March</option>
+                                                <option value="04">April</option>
+                                                <option value="05">May</option>
+                                                <option value="06">June</option>
+                                                <option value="07">July</option>
+                                                <option value="08">August</option>
+                                                <option value="09">September</option>
+                                                <option value="10">October</option>
+                                                <option value="11">November</option>
+                                                <option value="12">December</option>
+                                            </select>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="yearInput" class="form-label">Year</label>
+                                            <input type="number" class="form-control" id="selected_year" placeholder="2024" name="selected_year">
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </form>                                
+                                    {% if best_days %}
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-bordered table-hover">
+                                            <thead>
+                                                <tr>
+                                                    <th>Date</th>
+                                                    <th>Revenue</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for day in best_days %}
+                                                <tr>
+                                                    <td>{{ day.InvDate }}</td>
+                                                    <td>{{ day.Total_Revenue }}</td>
+                                                </tr>
+                                                {% empty %}
+                                                <tr>
+                                                    <td colspan="2">No data.</td>
+                                                </tr>
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    {% endif %}
                                 </div>
-                                
-                                <div class="col-md-2">
-                                    <button id="editBtn" type="submit" class="btn btn-secondary" >FIND</button>
-                                </div></div></form></center>
-                                <br>
-                                {% if facility_details %}
-                                <form action="{% url 'edit_facility' %}" method="POST">
-                                    <input type="text" name="facility_id" value="{{ facility_details.Facility_ID }}" hidden>
-                                    {% csrf_token %}
-                                    
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="street">Street:</label>
-                                                <input type="text" class="form-control" id="street" name="street" value="{{ facility_details.Street }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="city">City:</label>
-                                                <input type="text" class="form-control" id="city" name="city" value="{{ facility_details.City }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="state">State:</label>
-                                                <input type="text" class="form-control" id="state" name="state" value="{{ facility_details.State }}" required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="zip">Zip:</label>
-                                                <input type="text" class="form-control" id="zip" name="zip"  value="{{ facility_details.Zip }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="size">Max Size:</label>
-                                                <input type="number" class="form-control" id="size" name="size" value="{{ facility_details.MaxSize }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="facility_type">Facility Type:</label>
-                                                <select class="form-control" id="facility_type" name="facility_type" required onchange="toggleAdditionalFields()">
-                                                    <option value="" disabled selected>Select</option>
-                                                    <option value="Office" {% if facility_details.Facility_Type == "Office" %}selected{% endif %}>Office Building</option>
-                                                    <option value="OP_Surgery" {% if facility_details.Facility_Type == "OP Surgery" %}selected{% endif %}>OP Surgery</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Additional Fields Based on Job Class -->
-                                    
-                                        <div id="additional_fields_op_surgery" class="additional-fields" style="display: none;">
-                                            <div class="row" style="justify-content: space-between">
-                                                <div class="form-group col-md-4">
-                                                <label for="room_count">Room Count:</label>
-                                                <input type="text" class="form-control" id="room_count" name="room_count" value="{{ facility_details.Room_Count }}">
-                                            </div>
-                                            <div class="form-group col-md-4">
-                                                <label for="procedure_code">Procedure Code:</label>
-                                                <input type="text" class="form-control" id="procedure_code" name="procedure_code" value="{{ facility_details.Procedure_Code }}">
-                                            </div>
-                                            <div class="form-group col-md-4">
-                                                <label for="description">Description:</label>
-                                                <input type="text" class="form-control" id="description" name="description" value="{{ facility_details.Description }}">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <center>
-                                        <div id="additional_fields_office" class="additional-fields col-md-4" style="display: none;">
-                                            <div class="form-group">
-                                                <label for="office_count">Office Count:</label>
-                                                <input type="text" class="form-control" id="office_count" name="office_count" value="{{ facility_details.Office_Count }}">
-                                            </div>
-                                        </div>
-                                    </center>
-
-                                    <center><button type="submit" class="btn btn-secondary">EDIT</button></center>
-                                </form>{% endif %}
                             </div>
                         </div>
                     </div>
