--- a/frontend/management/templates/reports/reports5.html
+++ b/frontend/management/templates/reports/reports5.html
@@ -14,94 +14,78 @@
             </div>
         </div>
         <div class="col-md-10">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-12">
-                        <div class="card mt-8">
-                            <div class="card-body">
-                                <div class="table-content" id="editInsuranceComp_content">
-                                    <div class="text-center mb-4">
-                                    <h3>Edit Insurance Company</h3>
-                                    <p class="lead">Select the ID of the insurance company below:</p>
-                                </div>
-                                <form method="GET" action="{% url 'edit_insurance' %}">
-                                    <div class = "row" style="justify-content: center">
-                                        <div class="col-md-4">
-                                            <select id="insuranceDropdown" name="insuranceDropdown" class="form-control">
-                                                <option value="" disabled {% if not insurance_details %}selected{% endif %}>Select ID</option>
-                                                {% for insurance in insurance_companies %}
-                                                    <option value="{{ insurance.InsuranceComp_ID }}" {% if insurance_details and insurance.InsuranceComp_ID == insurance_details.InsuranceComp_ID %}selected{% endif %}>{{ insurance.InsuranceComp_ID }}</option>
-                                                {% endfor %}
-                                            </select>
-                                        </div>
-                                        <div class="col-md-2">
-                                            <button id="editBtn" type="submit" class="btn btn-secondary" >FIND</button>
-                                        </div>
-                                    </div>
-                                </form>
-                                        <br>
-                                        <!-- window.print("DETAILS {{ insurance_details }}")-->
-                                        {% if insurance_details %}
-                                        <form action="{% url 'edit_insurance' %}" method="POST">
-                                        <input type="text" name="insurance_id" value="{{ insurance_details.InsuranceComp_ID }}" hidden>
-                                        {% csrf_token %}
-                                        <div class="form-group">
-                                            <div class="row" justify-content-center>
-                                                <div class="col-md-12">
-                                                    <div class="form-group"></div>
-                                                    <div class="form-group">
-                                                        <div class="row" justify-content-center>
-                                                            <div class="col-md-12">
-                                                                <div class="form-group">
-                                                                    <label for="name">Name:</label>
-                                                                    <input type="text" class="form-control" id="name" name="name" value="{{ insurance_details.Name }}" required>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="row" justify-content-center>
-                                                            <div class="col-md-6">
-                                                                <div class="form-group">
-                                                                    <label for="street">Street:</label>
-                                                                    <input type="text" class="form-control" id="street" name="street" value="{{ insurance_details.Street }}" required>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <div class="form-group">
-                                                                    <label for="city">City:</label>
-                                                                    <input type="text" class="form-control" id="city" name="city" value="{{ insurance_details.City }}" required>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="col-md-6">
-                                                                <div class="form-group">
-                                                                    <label for="state">State:</label>
-                                                                    <input type="text" class="form-control" id="state" name="state" value="{{ insurance_details.State }}" required>
-                                                                </div> 
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <div class="form-group">
-                                                                    <label for="zip">Zip:</label>
-                                                                    <input type="text" class="form-control" id="zip" name="zip" value="{{ insurance_details.Zip }}" required>
-                                                                </div>
-                                                            </div>
-                                                        </div>    
-                                                        <center><button type="submit" class="btn btn-secondary">EDIT</button></center>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+            <div class="table-content" >
+                <div class="text-center mb-4">
+                    <h3>Average Daily Revenue for Each Company</h3>
+                    <p class="lead">View average daily revenue for a selected period :</p>
+                    <br>
+                </div>
+                <br>
+                <center>
+                    <form action="{% url 'view_report5' %}" method="GET">
+                    <div class = "row" style="justify-content: center">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <input type="date" class="form-control" id="selected_start_date" name="selected_start_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
+                            <input type="date" class="form-control" id="selected_end_date" name="selected_end_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
                         </div>
                     </div>
-                </div>
+                    
+                    <div class="col-md-2">
+                        <button id="editBtn" type="submit" class="btn btn-secondary" >FIND</button>
+                    </div></div></form></center>
+                    <br>
+                    {% if average_revenue %}
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Average Cost</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for f in average_revenue %}
+                            <tr>
+                                <td>{{ f.Name }}</td>
+                                <td >{{ f.Average_Cost }}</td>
+                            </tr>
+                            {% empty %}
+                            <tr>
+                                <td colspan="8">No Revenue.</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>{%endif%}
+                <!-- Pagination -->
+                <ul class="pagination justify-content-center">
+                    {% if average_revenue.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page=1&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">&laquo; First</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ average_revenue.previous_page_number }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Previous</a>
+                        </li>
+                    {% endif %}
+                    {% if average_revenue %}
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#">Page {{ average_revenue.number }} of {{ average_revenue.paginator.num_pages }}</a>
+                    </li>
+                    {% endif %}
+                    {% if average_revenue.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ average_revenue.next_page_number }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Next</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ average_revenue.next_page_number|urlencode }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Last &raquo;</a>
+                        </li>
+                    {% endif %}
+                   </ul>
             </div>
         </div>
     </div>
 </div>
-{% endif %}
 {% endblock %}
                                                     
                                                     
