--- a/frontend/management/templates/reports/reports5.html
+++ b/frontend/management/templates/reports/reports5.html
@@ -18,19 +18,20 @@
                 <div class="text-center mb-4">
                     <h3>Average Daily Revenue for Each Company</h3>
                     <p class="lead">View average daily revenue for a selected period :</p>
-                    <br>
                 </div>
-                <br>
                 <center>
                     <form action="{% url 'view_report5' %}" method="GET">
                     <div class = "row" style="justify-content: center">
                     <div class="col-md-4">
                         <div class="form-group">
                             <input type="date" class="form-control" id="selected_start_date" name="selected_start_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
                             <input type="date" class="form-control" id="selected_end_date" name="selected_end_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
                         </div>
                     </div>
-                    
                     <div class="col-md-2">
                         <button id="editBtn" type="submit" class="btn btn-secondary" >FIND</button>
                     </div></div></form></center>
