--- a/frontend/management/templates/reports/reports4.html
+++ b/frontend/management/templates/reports/reports4.html
@@ -14,81 +14,65 @@
             </div>
         </div>        
         <div class="col-md-10">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-12">
-                        <div class="card mt-8">
-                            <div class="card-body">
-                                <center><h5>Best Five Days</h5></center>
-                                <p class="lead">for a selected month :</p>
-                                <br><center>
-                                    <form action="{% url 'view_report4' %}" method="GET">
-                                        <div class="mb-3">
-                                            <label for="monthSelect" class="form-label">Month</label>
-                                            <select class="form-select" id="selected_month" name="selected_month">
-                                                <option value="01">January</option>
-                                                <option value="02">February</option>
-                                                <option value="03">March</option>
-                                                <option value="04">April</option>
-                                                <option value="05">May</option>
-                                                <option value="06">June</option>
-                                                <option value="07">July</option>
-                                                <option value="08">August</option>
-                                                <option value="09">September</option>
-                                                <option value="10">October</option>
-                                                <option value="11">November</option>
-                                                <option value="12">December</option>
-                                            </select>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="yearInput" class="form-label">Year</label>
-                                            <input type="number" class="form-control" id="selected_year" placeholder="2024" name="selected_year">
-                                        </div>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                    </form>                                
-                                    {% if best_days %}
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover">
-                                            <thead>
-                                                <tr>
-                                                    <th>Date</th>
-                                                    <th>Revenue</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                {% for day in best_days %}
-                                                <tr>
-                                                    <td>{{ day.InvDate }}</td>
-                                                    <td>{{ day.Total_Revenue }}</td>
-                                                </tr>
-                                                {% empty %}
-                                                <tr>
-                                                    <td colspan="2">No data.</td>
-                                                </tr>
-                                                {% endfor %}
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    {% endif %}
-                                </div>
-                            </div>
+            <div class="card">
+            <div class="text-center mb-4"><br>
+                <h3>Best Five Revenue Days</h3>
+                <p class="lead">Select a month below to get top 5 revenue days.</p>
+            </div><center>
+                <form action="{% url 'view_report4' %}" method="GET">
+                    <div class = "row" style="justify-content: center">
+                        <div class="col-md-3">
+                            <select class="form-control"  id="selected_month" name="selected_month" required>
+                                <option value="" disabled {% if not selected_month %}selected{% endif %}>Select Month</option>
+                                <option value="01" {% if selected_month and selected_month == "01" %}selected{% endif %}>January</option>
+                                <option value="02" {% if selected_month and selected_month == "02" %}selected{% endif %}>February</option>
+                                <option value="03" {% if selected_month and selected_month == "03" %}selected{% endif %}>March</option>
+                                <option value="04" {% if selected_month and selected_month == "04" %}selected{% endif %}>April</option>
+                                <option value="05" {% if selected_month and selected_month == "05" %}selected{% endif %}>May</option>
+                                <option value="06" {% if selected_month and selected_month == "06" %}selected{% endif %}>June</option>
+                                <option value="07" {% if selected_month and selected_month == "07" %}selected{% endif %}>July</option>
+                                <option value="08" {% if selected_month and selected_month == "08" %}selected{% endif %}>August</option>
+                                <option value="09" {% if selected_month and selected_month == "09" %}selected{% endif %}>September</option>
+                                <option value="10" {% if selected_month and selected_month == "10" %}selected{% endif %}>October</option>
+                                <option value="11" {% if selected_month and selected_month == "11" %}selected{% endif %}>November</option>
+                                <option value="12" {% if selected_month and selected_month == "12" %}selected{% endif %}>December</option>
+                            </select>
                         </div>
-                    </div>
+                        <div class="col-md-3">
+                        <input type="number" class="form-control" id="selected_year" name="selected_year" placeholder="Year" value={%if selected_year %}{{ selected_year}}{% endif %}  required>
+                        </div>
+                        <div class="col-md-2">
+                    <button type="submit" class="btn btn-secondary">Submit</button>
+                        </div></div>
+                </form>  
+                <br><br>                              
+                {% if selected_month %}
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Revenue</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for day in best_days %}
+                            <tr>
+                                <td>{{ day.InvDate }}</td>
+                                <td>{{ day.Total_Revenue }}</td>
+                            </tr>
+                            {% empty %}
+                            <tr>
+                                <td colspan="2">No data.</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
-            </div>
+                {% endif %}
+            </div></div>
         </div>
     </div>
 </div>
-<script>
-    function toggleAdditionalFields() {
-        var jobClass = document.getElementById("facility_type").value;
-        var additionalFields = document.getElementsByClassName("additional-fields");
-        for (var i = 0; i < additionalFields.length; i++) {
-            additionalFields[i].style.display = "none";
-        }
-        var additionalFieldsToShow = document.getElementById("additional_fields_" + jobClass.toLowerCase().trim());
-        additionalFieldsToShow.style.display = "block";
-    }
-    document.addEventListener("DOMContentLoaded", toggleAdditionalFields);
-</script>
+
 {% endblock %}
