--- a/frontend/management/templates/reports/reports5.html
+++ b/frontend/management/templates/reports/reports5.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col-md-10">
-            <div class="table-content" >
+            <div class="card" ><br>
                 <div class="text-center mb-4">
                     <h3>Average Daily Revenue for Each Company</h3>
                     <p class="lead">View average daily revenue for a selected period :</p>
@@ -24,19 +24,19 @@
                     <div class = "row" style="justify-content: center">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="date" class="form-control" id="selected_start_date" name="selected_start_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
+                            <input type="date" class="form-control" id="selected_start_date" name="selected_start_date" value="{% if selected_start_date %}{{selected_start_date}}{% endif %}" required>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input type="date" class="form-control" id="selected_end_date" name="selected_end_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
+                            <input type="date" class="form-control" id="selected_end_date" name="selected_end_date" value="{% if selected_end_date %}{{selected_end_date}}{% endif %}" required>
                         </div>
                     </div>
                     <div class="col-md-2">
                         <button id="editBtn" type="submit" class="btn btn-secondary" >FIND</button>
                     </div></div></form></center>
                     <br>
-                    {% if average_revenue %}
+                    {% if selected_start_date %}
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
@@ -49,7 +49,7 @@
                             {% for f in average_revenue %}
                             <tr>
                                 <td>{{ f.Name }}</td>
-                                <td >{{ f.Average_Cost }}</td>
+                                <td >${{ f.Average_Cost }}</td>
                             </tr>
                             {% empty %}
                             <tr>
