--- a/frontend/management/templates/reports/reports3.html
+++ b/frontend/management/templates/reports/reports3.html
@@ -14,35 +14,42 @@
             </div>
         </div>        
         <div class="col-md-10">
-            <div class="table-content" >
-                <div class="text-center mb-4">
-                    <h3>Appointments by Facility</h3>
-                    <p class="lead">for a given time period :</p>
-                    <br>
+            <div class="card" >
+                <div class="text-center mb-4"><br>
+                    <h3>Facility Appointments List</h3>
                 </div>
-                <br>
                 <center>
                     <form action="{% url 'view_report3' %}" method="GET">
-                    <div class = "row" style="justify-content: center">
-                    <div class="col-md-4">
-                        <select class="form-control" id="selected_facility_id" name="selected_facility_id" required>
-                            <option value=""{% if not selected_facility_id %}selected{% endif %}>Select</option>
-                            {% for facility in facilities %}
-                                <option value="{{ facility.Facility_ID }}" {% if facility.Facility_ID|stringformat:"s" == selected_facility_id %}selected{% endif %}>{{ facility.Facility_ID }}</option>
-                            {% endfor %}
-                        </select>         
-                    </div>
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <input type="date" class="form-control" id="selected_start_date" name="selected_start_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
-                            <input type="date" class="form-control" id="selected_end_date" name="selected_end_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
+                        <div class = "row" style="justify-content: center">
+                            <div class="col-md-2">
+                                <label for="selected_facility_id">Select Facility:</label>
+                                <select class="form-control" id="selected_facility_id" name="selected_facility_id" required>
+                                    <option value=""{% if not selected_facility_id %}selected{% endif %}>Select</option>
+                                    {% for facility in facilities %}
+                                        <option value="{{ facility.Facility_ID }}" {% if facility.Facility_ID|stringformat:"s" == selected_facility_id %}selected{% endif %}>{{ facility.Facility_ID }}</option>
+                                    {% endfor %}
+                                </select>         
+                            </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="selected_start_date">Start Date:</label>
+                                <input type="date" class="form-control" id="selected_start_date" name="selected_start_date" value="{% if selected_start_date %}{{selected_start_date}}{% endif %}" required>
+                            </div>
                         </div>
-                    </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="selected_end_date">End Date:</label>
+                                <input type="date" class="form-control" id="selected_end_date" name="selected_end_date" value="{% if selected_end_date %}{{selected_end_date}}{% endif %}" required>
+                            </div>
+                        </div>
+                        </div>
+                        <div class = "row" style="justify-content: center">
+                    
                     <div class="col-md-2">
                         <button id="editBtn" type="submit" class="btn btn-secondary">FIND</button>
                     </div></div></form></center>
                     <br>
-                    {% if appointments %}
+                    {% if selected_end_date %}
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
@@ -77,25 +84,25 @@
                 </div>{%endif%}
                 <!-- Pagination -->
                 <ul class="pagination justify-content-center">
-                    {% if average_revenue.has_previous %}
+                    {% if appointments.has_previous %}
                         <li class="page-item">
                             <a class="page-link" href="?page=1&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">&laquo; First</a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ average_revenue.previous_page_number }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Previous</a>
+                            <a class="page-link" href="?page={{ appointments.previous_page_number }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Previous</a>
                         </li>
                     {% endif %}
-                    {% if average_revenue %}
+                    {% if appointments %}
                     <li class="page-item disabled">
-                        <a class="page-link" href="#">Page {{ average_revenue.number }} of {{ average_revenue.paginator.num_pages }}</a>
+                        <a class="page-link" href="#">Page {{ appointments.number }} of {{ appointments.paginator.num_pages }}</a>
                     </li>
                     {% endif %}
-                    {% if average_revenue.has_next %}
+                    {% if appointments.has_next %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ average_revenue.next_page_number }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Next</a>
+                            <a class="page-link" href="?page={{ appointments.next_page_number }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Next</a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ average_revenue.next_page_number|urlencode }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Last &raquo;</a>
+                            <a class="page-link" href="?page={{ appointments.next_page_number|urlencode }}&selected_start_date={{ selected_start_date }}&selected_end_date={{ selected_end_date }}">Last &raquo;</a>
                         </li>
                     {% endif %}
                    </ul>
@@ -103,16 +110,4 @@
         </div>
     </div>
 </div>
-<script>
-    function toggleAdditionalFields() {
-        var jobClass = document.getElementById("facility_type").value;
-        var additionalFields = document.getElementsByClassName("additional-fields");
-        for (var i = 0; i < additionalFields.length; i++) {
-            additionalFields[i].style.display = "none";
-        }
-        var additionalFieldsToShow = document.getElementById("additional_fields_" + jobClass.toLowerCase().trim());
-        additionalFieldsToShow.style.display = "block";
-    }
-    document.addEventListener("DOMContentLoaded", toggleAdditionalFields);
-</script>
 {% endblock %}
