Update Appointment fixes

--- a/frontend/management/templates/patient/appointments.html
+++ b/frontend/management/templates/patient/appointments.html
@@ -28,6 +28,7 @@
                                 <th>Patient Name</th>
                                 <th>Doctor Assigned</th>
                                 <th>Facility ID</th>
+                                <th>Description</th>
                                 <th>Date Time</th>
                                 <th>Status</th>
                                 <th>Cost</th>
@@ -40,6 +41,7 @@
                                 <td>{{ patient.Patient_Name }}</td>
                                 <td>{{ patient.Doctor_Name }}</td>
                                 <td>{{ patient.Facility_ID }}</td>
+                                <td>{{ patient.Reason }}</td>
                                 <td>{{ patient.Appointment_Date_Time }}</td>
                                 <td>{{ patient.Appointment_Cost }}</td>
                                 <td>{{ patient.Status }}</td>
