--- a/frontend/management/templates/patient/make_appointment.html
+++ b/frontend/management/templates/patient/make_appointment.html
@@ -58,9 +58,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+
                                     
-                                    <div class="row" style="justify-content: space-around;">
+                                    <div class="row">
                                     <div class="col-md-4">
                                     <div class="form-group">
                                         
@@ -68,6 +68,13 @@
                                         <input class="form-control" type="date" id="appointment_date" name="appointment_date" required>
                                         
                                     </div></div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            
+                                            <label for="reason">Description:</label>
+                                            <input class="form-control" type="text" id="reason" name="reason" required>
+                                            
+                                        </div></div>
                                     <div class="col-md-4">
                                     <div class="form-group">
                                         
